fix overlow issue on mobile

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -6,6 +6,10 @@
   box-sizing: inherit;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 html {
   font-size: 62.5%;
 
@@ -16,7 +20,6 @@ html {
 
 body {
   box-sizing: border-box;
-  overflow-x: hidden;
 }
 
 .container {
